# iagp-mlds6-proyecto

./: README.md  app.py  gitignore  modelo_siames_firmas_final.keras  modelo_siames_firmas_v2.keras  pyproject.toml  requirements.txt
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  model_report.md
scripts/data_acquisition/: 1_business_data_load.ipynb
scripts/deployment/: 5_deployment.ipynb
scripts/eda/: _2_exploratory_data_analysis.ipynb
scripts/evaluation/: 4_modeling.ipynb  M5U4_3_experimental_set_up.ipynb
