[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "firmas-adulteradas"
version     = "0.1.0"
description = "Identificación de Firmas Adulteradas con Redes Siamesas — MLDS Módulo 6, UNAL"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [
    { name = "Ivonne Alexandra Guevara Prieto", email = "iaguevarap@unal.edu.co" }
]
requires-python = ">=3.11,<3.12"
keywords    = ["deep-learning", "siamese-network", "signature-verification", "fraud-detection"]

dependencies = [
    "tensorflow==2.15.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0,<2.0.0",
    "streamlit>=1.32.0",
    "Pillow>=10.0.0",
    "kagglehub>=0.2.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "gdown>=4.7.0",
]

[project.urls]
Repository  = "https://github.com/iaguevarap-cpu/iagp-mlds6-proyecto"
Dataset     = "https://www.kaggle.com/datasets/robinreni/signature-verification-dataset"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
